dropped size in dark mode (stop media queries bug)

--- a/styles.css
+++ b/styles.css
@@ -174,9 +174,6 @@ nav{
 }
 
 .dark-mode h1 {
-    font-family: myKaira;
-    font-size: 8em;
-    margin: 0.2em;
     color: black;
     /* -webkit-text-stroke: 0.0005em #000; */
     text-shadow:0.0em 0.02em #FFF, 0.0054em 0.0193em #FFF, 0.0104em 0.0171em #FFF, 0.0146em 0.0137em #FFF, 
